[package]
name = "futures-intrusive"
edition = "2018"
version = "0.2.2"
authors = ["Matthias Einwag <matthias.einwag@live.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Matthias247/futures-intrusive"
homepage = "https://github.com/Matthias247/futures-intrusive"
description = """
Futures based on intrusive data structures - for std and no-std environments.
"""

[lib]
name = "futures_intrusive"

[features]
std = ["futures-core/std", "parking_lot"]
default = ["std"]

[dependencies]
futures-core = { version = "0.3.0", default-features = false }
lock_api = "0.3.1"
parking_lot = { version = "0.9", optional = true }

[dev-dependencies]
futures = { version = "0.3.0", default-features = true, features=["async-await"] }
futures-test = { version = "0.3.0", default-features = true }
pin-utils = "0.1.0-alpha.4"
criterion = "0.3.0"
crossbeam = "0.7" # For channel benchmarks
lazy_static = "1.4.0"
rand = "0.7"
tokio = "0.2.0-alpha.6" # For channel benchmarks
signal-hook = "0.1.11" # For cancellation example

[[bench]]
name = "mpmc_channel"
harness = false
